--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
         <meta charset="UTF-8">
         <script type="text/javascript" src="js/main.js"></script>
     </head>
-    <body>
-        <h1>Minha página</h1>  
+    <body onload="load()">
+        <button type="button" onclick="clicou()">Clique aqui</button>
+        <p id="agradecimento" onclick="redirecionar()"></p>
+        <p id="mouseMove" onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui</p>
+        <p id="mouseMove" onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui</p>
+        <p onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui</p>
+        <select onchange="funcaoChange(this)">
+            <option value="1">Valor 1</option.value>
+            <option value="2">Valor 2</option.value>
+            <option value="3">Valor 3</option.value>    
+        </select>
     </body>
-</html>
+</html> 
